--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -21,9 +21,9 @@
             </form>
         </div>
     <div class="links">
-        <a th:href="@{/shop(category='3D')}">3D</a>
-        <a th:href="@{/shop(category='2D')}">2D</a>
-        <a th:href="@{/shop(category='Audio')}">Audio</a>
+        <a th:href="@{/shop(categories='3D')}">3D</a>
+        <a th:href="@{/shop(categories='2D')}">2D</a>
+        <a th:href="@{/shop(categories='Audio')}">Audio</a>
         <a th:href="@{/shop}">Code</a>
         <a th:href="@{/shop}">All</a>
     </div>
