--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -62,7 +62,7 @@
           <div class="form_control">
             <div class="form_control_container">
               <div class="form_control_container__time">Min</div>
-              <input class="form_control_container__time__input" type="number" name="biggestPrice" id="fromInput" th:placeholder="${smallestPrice}" th:min="${smallestPrice}" th:max="${biggestPrice}" th:step="0.01"/>
+              <input class="form_control_container__time__input" type="number" name="minPrice" id="fromInput" th:placeholder="${smallestPrice}" th:min="${smallestPrice}" th:max="${biggestPrice}" th:step="0.01"/>
             </div>
             <!-- FIXME: Fix range steps-->
             <div class="form_control_container">
