--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -497,6 +497,27 @@ body{
     color: var(--light);
 }
 
+.button-holder-filter{
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-evenly;
+    
+}
+
+.button-holder-filter input{
+    font-size: 12pt;
+    padding: 10px;
+    color: var(--white);
+    background-color: var(--dark);
+    border: solid 4px var(--light);
+    border-radius: 12px;
+    cursor: pointer;
+}
+
+.button-holder-filter input:hover{
+    background-color: var(--light);
+}
+
 .range_container {
     display: flex;
     flex-direction: column;
