--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/css/style.css">
         <link rel="icon" type="image/png" href="icons/AC.png"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="https://allfont.net/allfont.css?fonts=agency-fb" rel="stylesheet" type="text/css" />
@@ -213,6 +213,6 @@
 
     <div th:replace="~{fragments/footer.html :: footer}" id="footer-placeholder"></div>
     //FIXME: Add to script part for relading filters inputs
-    <script src="/script.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 </html>
