Modified TODO list

--- a/src/main/resources/templates/fragments/product.html
+++ b/src/main/resources/templates/fragments/product.html
@@ -1,4 +1,5 @@
 <!-- TODO: Update froduct card visuals -->
+<!--    TODO: Make adding to cart and whishlisting work-->
 <div th:fragment="product(product)" class="product-card__main">
     <a th:href="@{/productPage/{id}(id=${product.id})}" class="product-card-link">
     <article class="product-card">
