--- a/src/main/resources/templates/signInPage.html
+++ b/src/main/resources/templates/signInPage.html
@@ -12,6 +12,7 @@
 <body>
     <div th:replace="~{fragments/nav.html :: nav}" id="nav-placeholder"></div>
 
+<!--    TODO: Update loging form visuals-->
     <div class="form-holder">
         <div class="img-holder">
             <img th:src="@{/icons/account.png}" alt="">
