--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -21,8 +21,8 @@
 
             <div class="hello">
                 <h1>Hello User!</h1>
-                <span sec:authentication="principal.username"></span>
-                <p>account@e-mail.com</p>
+                <p sec:authentication="principal.username"></p>
+                <p th:text="${email}">account@e-mail.com</p>
 
                 <form th:action="@{/logout}" method="POST">
                     <input type="submit" value="Logout"/>
@@ -36,7 +36,6 @@
             </div>
 
             <div class="option">
-            <h2>Account Options</h2>
             <div class="options">
                 <div><img src="icons/security icon.png"> <p>Security</p></div>
                 <div><img src="icons/feedback icon.png"> <p>Feedback</p></div>
