--- a/src/main/resources/templates/signInPage.html
+++ b/src/main/resources/templates/signInPage.html
@@ -17,21 +17,25 @@
         <div class="img-holder">
             <img th:src="@{/icons/account.png}" alt="">
         </div>
-        <form th:href="@{/account}" th:action="@{/authenticateTheUser}" method="POST">
-            <p>Username:<input type="text" name="username" id="" class="username-input"></p>
-            <p>Password:<input type="password" name="password" id="" class="password-input"></p>
+        <h1>Sign in</h1>
+        
+        <div th:if="${param.error}" class="message">
+            <span class="error-message">Wrong username or password entered.</span>
+        </div>
+        
+        <div th:if="${param.logout}" class="message">
+            <span class="logout-message">You have been loged out.</span>
+        </div>
+        
+        <form th:action="@{/authenticateTheUser}" method="POST">
+            <p><input type="text" name="username" placeholder="Username" id="" class="username-input"></p>
+            <p><input type="password" name="password" placeholder="Password" id="" class="password-input"></p>
             <span class="sign-up"><a href="@{/signUp}" class="sign-up-link"></a></span>
             
-            <span class="forgot-password-link">Forgot password? <a href="" class="forgot-password-link">resset password</a></span>
-            
-            <div th:if="${param.error}">
-                <span class="error-message">Wrong username or password entered.</span>
+            <div class="forgot-password-link-holder">
+                <h3 >Forgot password? <a href="#" class="forgot-password-link">resset password</a></h3>
             </div>
 
-            <div th:if="${param.logout}">
-                <span class="logout-message">You have been loged out.</span>
-            </div>
-            
             <div class="button-holder">
                 <input type="button" value="Go Back" class="go-back-input">
                 <input type="submit" value="Sign In" class="submit-input">
