--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -44,10 +44,21 @@
 
         <div class="incart" th:unless="${products.isEmpty()}"> 
                 <div th:each="product : ${products}" class="inCart-products">
+                    <a th:href="@{/productPage/{id}(id=${product.productId})}" class="product-card-link">
                     <p class="product-card__owner">
                         <span th:text="${product.ownerUsername}">Owner Username</span>
                         <h2 class="product-card__title" th:text="${product.productName}">Product Name</h2>
+                        <span>$</span><span th:text="${product.productPrice}">$0.00</span>
+                        <span th:text="${product.rating}">Rating</span>
+                        <span th:text="${product.category}">Category</span>
+                        <span th:text="${product.description}">Description</span>
                     </p>
+                </a>
+
+                <div class="bin">
+                    <img src="icons/binclose.png" class="img-bottom">
+                    <img src="icons/binopen.png" class="img-top">
+                </div>
                 </div>
         </div>
 
