--- a/src/main/resources/templates/fragments/product.html
+++ b/src/main/resources/templates/fragments/product.html
@@ -6,8 +6,8 @@
         <header class="product-card__header">
             <div class="img-container">
             <img th:src="@{${product.imgPath[0].path}}" alt="Product Image">
-            </div>
-            <p class="product-card__owner">
+        </div>
+        <p class="product-card__owner">
                 <span th:text="${product.owner}">Owner Username</span>
             </p>
             <h2 class="product-card__title" th:text="${product.name}">Product Name</h2>
@@ -21,10 +21,17 @@
                     <span>$</span><span th:text="${product.price}">$0.00</span>
                 </p>
                 <div class="product-card-cart-button">
-                    <div class="cart-img-holder">
-                        <img th:src="@{/icons/cart.png}">
-                    </div>
-                    <input type="submit" value="Add to Cart">
+                    <form th:action="@{cart/add}" method="POST">
+                        <input type="hidden" name="_csrf" th:value="${_csrf.token}">
+                        <input type="hidden" name="productId" th:value="${product.id}">
+                    
+                    <button type="submit">
+                        <div class="cart-img-holder">
+                            <img th:src="@{/icons/cart.png}">
+                        </div>
+                        Add to Cart
+                     </button>
+                    </form>
                 </div>
             </div>
 
