Transfer DAO to JpaRepository

--- a/src/main/resources/templates/productPage.html
+++ b/src/main/resources/templates/productPage.html
@@ -46,7 +46,7 @@
     <div class="right">
         <p><strong>Category:</strong> <span th:text="${product.category}">Category</span></p>
         <h1 th:text="${product.name}">Product Name</h1>
-        <p><strong>Owner:</strong> <span th:text="${product.owner}">Owner Username</span></p>
+        <p><strong>Owner:</strong> <span th:text="${product.ownerUsername}">Owner Username</span></p>
         <p><strong>Rating:</strong> <span th:text="${product.rating}">0.0</span></p>
         <div><h2>$</h2><h2 th:text="${product.price}">$0.00</h2></div>
         <div>
