--- a/src/main/resources/templates/productPage.html
+++ b/src/main/resources/templates/productPage.html
@@ -21,11 +21,14 @@
             <img th:each="image : ${product.productImages}" th:src="@{${image.path}}" class="jobs" alt="Product Image"/>
         </div>
         <p><strong>Description:</strong> <span th:text="${product.description}">Description</span></p>
-        <form action="">
+        
+        <form th:action="@{/productPage/{productId}(productId=${product.id})}" method="POST" >
+            <input type="hidden" name="_csrf" th:value="${_csrf.token}">
             <div class="rating-holder">
                 <h3>Rating</h3>
                 <label class="rating-label">
                   <input
+                    name="rating"
                     class="rating"
                     min="0.5"
                     max="5"
@@ -34,10 +37,10 @@
                     type="range">
                 </label>
             </div>
-            <textarea rows="4" class="left-review" spellcheck="true" placeholder="Review"></textarea>
+            <textarea name="review" rows="4" class="left-review" spellcheck="true" placeholder="Review"></textarea>
             <input type="submit" value="Submit" class="submit-review-button">
-
         </form>
+
         <h2>Reviews:</h2>
         <div th:each="review : ${product.reviews}">
             <p><strong>Review:</strong> <span th:text="${review.rating}">0.0</span> <span th:text="${review.username}">0.0</span> <span th:text="${review.comment}">0.0</span></p>
