Changed int for BIGINT and Long

--- a/src/main/resources/templates/fragments/product.html
+++ b/src/main/resources/templates/fragments/product.html
@@ -1,5 +1,5 @@
 <!-- TODO: Update froduct card visuals -->
-<!--    TODO: Make adding to cart and whishlisting work-->
+<!--    TODO: Whishlisting work-->
 <div th:fragment="product(product)" class="product-card__main">
     <a th:href="@{/productPage/{productId}(productId=${product.id})}" class="product-card-link">
     <article class="product-card">
