--- a/src/main/resources/templates/productPage.html
+++ b/src/main/resources/templates/productPage.html
@@ -21,6 +21,7 @@
         </div>
         <p><strong>Description:</strong> <span th:text="${product.description}">Description</span></p>
         
+        <div th:if="${product.isBought}">
         <form th:action="@{/productPage/{productId}(productId=${product.id})}" method="POST" >
             <input type="hidden" name="_csrf" th:value="${_csrf.token}">
             <div class="rating-holder">
@@ -39,6 +40,7 @@
             <textarea name="review" rows="4" class="left-review" spellcheck="true" placeholder="Review"></textarea>
             <input type="submit" value="Submit" class="submit-review-button">
         </form>
+        </div>
 
         <h2>Reviews:</h2>
         <div th:each="review : ${product.reviews}">
@@ -48,10 +50,14 @@
     <div class="right">
         <p><strong>Category:</strong> <span th:text="${product.category}">Category</span></p>
         <h1 th:text="${product.name}">Product Name</h1>
-        <p><strong>Owner:</strong> <span th:text="${product.ownerUsername}">Owner Username</span></p>
+        <p><strong>Owner:</strong> 
+            <span th:text="${product.ownerUsername}">Owner Username</span> 
+            <span th:if="${product.isOwner}">(YOU)</span></p>
         <p><strong>Rating:</strong> <span th:text="${product.rating}">0.0</span></p>
-        <div><h2>$</h2><h2 th:text="${product.price}">$0.00</h2></div>
-        <div>
+        <div><h2><span>$</span><span th:text="${product.price}">$0.00</span></h2></div>
+        
+        <input type="submit" value="Edit" th:if="${product.isOwner}">
+        <div th:if="${!product.isBought} and ${!product.isOwner} and ${!product.inCart}">
             <input type="submit" value="Add to Cart" class="cart-button">
             <input type="submit" value="Heart" class="whishlist-button">
         </div>
