Added adding product with images mechanics

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -414,10 +414,13 @@ body{
 }
 
 .img-container img{
-    width: 260px;
+    
 }
 
 .img-container{
+    overflow: hidden;
+    width: 260px;
+    height: 130px;
     margin: -10px;
     margin-bottom: 10px;
     text-align: center;
