--- a/src/main/resources/templates/add-product-form.html
+++ b/src/main/resources/templates/add-product-form.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pl" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
     <head>
         <meta charset="UTF-8">
@@ -14,15 +14,16 @@
 <body>
     <div th:replace="~{fragments/nav.html :: nav}" id="nav-placeholder"></div>
 
-    <form action="POST">
-        <p>Name</p><input type="text" name="" id="">
-        <p>Category</p><input type="text" name="" id="">
+    <form th:action="@{/account/addProduct}" method="POST" enctype="multipart/form-data">
+         <h2>Images</h2><input type="file" name="files" accept="image/**" multiple> 
+        <h2>Name</h2><input type="text" name="name" id="">
+        <h2>Category</h2><input type="text" name="category" id="">
         <!-- <p>Produc Imagies</p><input type="text" name="" id=""> -->
-        <p>Price</p><input type="text" name="" id="">
-        <p>Description</p><textarea name="" id=""></textarea>
+        <h2>Price</h2><input type="number" step="0.01" name="price" id="">
+        <h2>Description</h2><textarea name="description" id=""></textarea>
 
         <input type="submit" value="Sell">
-        <!-- <input type="submit" value="Save as in progres"> -->
+        <!-- <input type="submit" value="Save as Draft"> -->
         <input type="submit" value="Discard">
     </form>
 
