Code maintance - services and display errors

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -90,7 +90,10 @@
             <h1>To pay</h1>
             <div class="sumary" >
                 <p>Sumary cost:</p>
-                <span id="totalPrice" style="color: white;">€53.60</span>
+                <p style="color: white;">
+                    <span>$</span><span id="totalPrice" >0.00</span>
+
+                </p>
             </div>
             <input type="submit" class="paybut" value="PAY">
             <div class="continue">
